boulder/boulder/tests/compile_fail/loop/empty.bo
# endless loop
# (5:

fn empty() {
    loop {

    }
}